<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc">

    <TextView
        android:id="@+id/txt_add_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/ubuntu"
        android:padding="10dp"
        android:text="@string/add_data"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="Enter Title"
        android:inputType="text"
        android:minHeight="50dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edt_details"
        app:layout_constraintEnd_toEndOf="@+id/txt_add_data"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_add_data"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_data"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edt_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="Enter Details"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txt_get_date"
        app:layout_constraintEnd_toEndOf="@+id/edt_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edt_title"
        app:layout_constraintTop_toBottomOf="@+id/edt_title" />

    <TextView
        android:id="@+id/txt_get_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/ubuntu"
        android:padding="10dp"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="@+id/edt_details"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edt_details"
        app:layout_constraintTop_toBottomOf="@+id/edt_details" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/btnshape"
        android:fontFamily="@font/ubuntu"
        android:text="@string/save"
        android:textColor="#9f66e9"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_get_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_get_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_get_date" />


</androidx.constraintlayout.widget.ConstraintLayout>